fix column gap

--- a/src/components/mainMenu/MainMenu.css
+++ b/src/components/mainMenu/MainMenu.css
@@ -146,10 +146,10 @@
     gap: 1em;
     width: 50%;
     padding: 1em 0px 0em 1em;
+    column-gap: 2em;
 }
 
 .first-container {
     /* border: 2px solid yellow; */
     width: 70%;
-    gap: 2em;
 }
